# University

Minimarket/: .gitignore  CMakeLists.txt  Readme.md  all.hpp  main.cpp
Minimarket/Google_tests/: CMakeLists.txt  test1.cpp  tests.cpp
Minimarket/src/Banking/: BYN.cpp  BYN.hpp  CardPayment.cpp  CardPayment.hpp  CashPayment.cpp  CashPayment.hpp  CashRegister.cpp  CashRegister.hpp  Discount.cpp  Discount.hpp  PaymentMethod.cpp  PaymentMethod.hpp  ProductDiscount.cpp  ProductDiscount.hpp  Receipt.cpp  Receipt.hpp  TotalPriceDiscount.cpp  TotalPriceDiscount.hpp
Minimarket/src/Construction/: FridgeShelf.cpp  FridgeShelf.hpp  Minimarket.cpp  Minimarket.hpp  Shelf.cpp  Shelf.hpp  Shkaf.cpp  Shkaf.hpp  TradingFloor.cpp  TradingFloor.hpp
Minimarket/src/Customer/: Cart.cpp  Cart.hpp  Customer.cpp  Customer.hpp
Minimarket/src/Documentation/: Documentation.cpp  Documentation.hpp
Minimarket/src/Employee/: Cashier.cpp  Cashier.hpp  Cleaner.cpp  Cleaner.hpp  CleaningSchedule.cpp  CleaningSchedule.hpp  ContactInformation.cpp  ContactInformation.hpp  Director.cpp  Director.hpp  Employee.cpp  Employee.hpp  StaffDatabase.cpp  StaffDatabase.hpp  WarehouseWorker.cpp  WarehouseWorker.hpp  WorkSchedule.cpp  WorkSchedule.hpp
Minimarket/src/Exceptions/: MinimarketException.hpp
Minimarket/src/Products/: Alcohol.cpp  Alcohol.hpp  Beverage.cpp  Beverage.hpp  Date.cpp  Date.hpp  MilkProduct.cpp  MilkProduct.hpp  Product.cpp  Product.hpp
Minimarket/src/Shipment/: DeliveryTransport.cpp  DeliveryTransport.hpp  ProductsDelivery.cpp  ProductsDelivery.hpp  Provider.cpp  Provider.hpp  PurchaseOrder.cpp  PurchaseOrder.hpp
Minimarket/src/Warehouse/: ProductsInWarehouse.cpp  ProductsInWarehouse.hpp  Warehouse.cpp  Warehouse.hpp
ThePostMachine/: .gitignore  CMakeLists.txt  Machine.cpp  Machine.hpp  Rule.cpp  Rule.hpp  Ruls.txt  Tape.cpp  Tape.hpp  main.cpp  prog.txt  prog.txt.txt
ThePostMachine/Google_tests/: CMakeLists.txt  test1.cpp
ThePostMachine/Google_tests/lib/: CMakeLists.txt
TicTacToe/: .gitignore  CMakeLists.txt  Doxyfile  Play.cpp  Play.h  main.cpp  test1.cpp
TicTacToe/Google_tests/: CMakeLists.txt
